@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2025 Echo Three, LLC
+// Copyright 2002-2026 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -24,37 +24,33 @@ import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.accounting.server.entity.TransactionTimeType;
 import com.echothree.model.data.accounting.server.factory.TransactionTimeTypeFactory;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import javax.enterprise.context.RequestScoped;
+import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
-@RequestScoped
+@Dependent
 public class GetTransactionTimeTypesCommand
-        extends BaseMultipleEntitiesCommand<TransactionTimeType, GetTransactionTimeTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<TransactionTimeType, GetTransactionTimeTypesForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.TransactionTimeType.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetTransactionTimeTypesCommand */
@@ -62,10 +58,21 @@ public class GetTransactionTimeTypesCommand
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
 
+    @Inject
+    TransactionTimeControl transactionTimeControl;
+
+    @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        return transactionTimeControl.countTransactionTimeTypes();
+    }
+
     @Override
     protected Collection<TransactionTimeType> getEntities() {
-        var transactionTimeControl = Session.getModelController(TransactionTimeControl.class);
-
         return transactionTimeControl.getTransactionTimeTypes();
     }
 
@@ -74,10 +81,8 @@ public class GetTransactionTimeTypesCommand
         var result = AccountingResultFactory.getGetTransactionTimeTypesResult();
 
         if(entities != null) {
-            var transactionTimeControl = Session.getModelController(TransactionTimeControl.class);
-
             if(session.hasLimit(TransactionTimeTypeFactory.class)) {
-                result.setTransactionTimeTypeCount(transactionTimeControl.countTransactionTimeTypes());
+                result.setTransactionTimeTypeCount(getTotalEntities());
             }
 
             result.setTransactionTimeTypes(transactionTimeControl.getTransactionTimeTypeTransfers(getUserVisit(), entities));
