@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2025 Echo Three, LLC
+// Copyright 2002-2026 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -23,37 +23,37 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.item.server.entity.ItemVolumeType;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.model.data.item.server.factory.ItemVolumeTypeFactory;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import javax.enterprise.context.RequestScoped;
+import java.util.Collection;
+import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
-@RequestScoped
+@Dependent
 public class GetItemVolumeTypesCommand
-        extends BaseMultipleEntitiesCommand<ItemVolumeType, GetItemVolumeTypesForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<ItemVolumeType, GetItemVolumeTypesForm> {
+
+    @Inject
+    ItemControl itemControl;
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.ItemVolumeType.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
 
     /** Creates a new instance of GetItemVolumeTypesCommand */
@@ -62,9 +62,17 @@ public class GetItemVolumeTypesCommand
     }
 
     @Override
-    protected Collection<ItemVolumeType> getEntities() {
-        var itemControl = Session.getModelController(ItemControl.class);
+    protected void handleForm() {
+        // No form fields.
+    }
 
+    @Override
+    protected Long getTotalEntities() {
+        return itemControl.countItemVolumeTypes();
+    }
+
+    @Override
+    protected Collection<ItemVolumeType> getEntities() {
         return itemControl.getItemVolumeTypes();
     }
 
@@ -73,7 +81,9 @@ public class GetItemVolumeTypesCommand
         var result = ItemResultFactory.getGetItemVolumeTypesResult();
 
         if(entities != null) {
-            var itemControl = Session.getModelController(ItemControl.class);
+            if(session.hasLimit(ItemVolumeTypeFactory.class)) {
+                result.setItemVolumeTypeCount(getTotalEntities());
+            }
 
             result.setItemVolumeTypes(itemControl.getItemVolumeTypeTransfers(getUserVisit(), entities));
         }
