@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2025 Echo Three, LLC
+// Copyright 2002-2026 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -24,37 +24,36 @@ import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.offer.server.entity.OfferNameElement;
 import com.echothree.model.data.offer.server.factory.OfferNameElementFactory;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import javax.enterprise.context.RequestScoped;
+import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
-@RequestScoped
+@Dependent
 public class GetOfferNameElementsCommand
-        extends BaseMultipleEntitiesCommand<OfferNameElement, GetOfferNameElementsForm> {
+        extends BasePaginatedMultipleEntitiesCommand<OfferNameElement, GetOfferNameElementsForm> {
     
+    @Inject
+    OfferNameElementControl offerNameElementControl;
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.OfferNameElement.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetOfferNameElementsCommand */
@@ -63,22 +62,31 @@ public class GetOfferNameElementsCommand
     }
     
     @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        return offerNameElementControl.countOfferNameElements();
+    }
+
+    @Override
     protected Collection<OfferNameElement> getEntities() {
-        var offerNameElementControl = Session.getModelController(OfferNameElementControl.class);
-        
         return offerNameElementControl.getOfferNameElements();
     }
     
     @Override
     protected BaseResult getResult(Collection<OfferNameElement> entities) {
         var result = OfferResultFactory.getGetOfferNameElementsResult();
-        var offerNameElementControl = Session.getModelController(OfferNameElementControl.class);
         
-        if(session.hasLimit(OfferNameElementFactory.class)) {
-            result.setOfferNameElementCount(offerNameElementControl.countOfferNameElements());
-        }
+        if(entities != null) {
+            if(session.hasLimit(OfferNameElementFactory.class)) {
+                result.setOfferNameElementCount(getTotalEntities());
+            }
 
-        result.setOfferNameElements(offerNameElementControl.getOfferNameElementTransfers(getUserVisit(), entities));
+            result.setOfferNameElements(offerNameElementControl.getOfferNameElementTransfers(getUserVisit(), entities));
+        }
         
         return result;
     }
