@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2025 Echo Three, LLC
+// Copyright 2002-2026 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -24,37 +24,36 @@ import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.offer.server.entity.UseNameElement;
 import com.echothree.model.data.offer.server.factory.UseNameElementFactory;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import javax.enterprise.context.RequestScoped;
+import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
-@RequestScoped
+@Dependent
 public class GetUseNameElementsCommand
-        extends BaseMultipleEntitiesCommand<UseNameElement, GetUseNameElementsForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<UseNameElement, GetUseNameElementsForm> {
+
+    @Inject
+    UseNameElementControl useNameElementControl;
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.UseNameElement.name(), SecurityRoles.List.name())
-                        )))
-                )));
-        
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetUseNameElementsCommand */
@@ -63,22 +62,31 @@ public class GetUseNameElementsCommand
     }
     
     @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        return useNameElementControl.countUseNameElements();
+    }
+
+    @Override
     protected Collection<UseNameElement> getEntities() {
-        var useNameElementControl = Session.getModelController(UseNameElementControl.class);
-        
         return useNameElementControl.getUseNameElements();
     }
     
     @Override
     protected BaseResult getResult(Collection<UseNameElement> entities) {
         var result = OfferResultFactory.getGetUseNameElementsResult();
-        var useNameElementControl = Session.getModelController(UseNameElementControl.class);
         
-        if(session.hasLimit(UseNameElementFactory.class)) {
-            result.setUseNameElementCount(useNameElementControl.countUseNameElements());
-        }
+        if(entities != null) {
+            if(session.hasLimit(UseNameElementFactory.class)) {
+                result.setUseNameElementCount(getTotalEntities());
+            }
 
-        result.setUseNameElements(useNameElementControl.getUseNameElementTransfers(getUserVisit(), entities));
+            result.setUseNameElements(useNameElementControl.getUseNameElementTransfers(getUserVisit(), entities));
+        }
         
         return result;
     }
