@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2025 Echo Three, LLC
+// Copyright 2002-2026 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -19,28 +19,28 @@ package com.echothree.control.user.payment.server.command;
 import com.echothree.control.user.payment.common.form.GetPaymentMethodTypesForm;
 import com.echothree.control.user.payment.common.result.PaymentResultFactory;
 import com.echothree.model.control.payment.server.control.PaymentMethodTypeControl;
+import com.echothree.model.data.party.server.factory.LanguageFactory;
 import com.echothree.model.data.payment.server.entity.PaymentMethodType;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import javax.enterprise.context.RequestScoped;
+import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
-@RequestScoped
+@Dependent
 public class GetPaymentMethodTypesCommand
-        extends BaseMultipleEntitiesCommand<PaymentMethodType, GetPaymentMethodTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<PaymentMethodType, GetPaymentMethodTypesForm> {
+
+    @Inject
+    PaymentMethodTypeControl paymentMethodTypeControl;
     
     // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetPaymentMethodTypesCommand */
@@ -49,19 +49,32 @@ public class GetPaymentMethodTypesCommand
     }
     
     @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        return paymentMethodTypeControl.countPaymentMethodTypes();
+    }
+
+    @Override
     protected Collection<PaymentMethodType> getEntities() {
-        var paymentMethodTypeControl = Session.getModelController(PaymentMethodTypeControl.class);
-        
         return paymentMethodTypeControl.getPaymentMethodTypes();
     }
     
     @Override
     protected BaseResult getResult(Collection<PaymentMethodType> entities) {
         var result = PaymentResultFactory.getGetPaymentMethodTypesResult();
-        var paymentMethodTypeControl = Session.getModelController(PaymentMethodTypeControl.class);
-        
-        result.setPaymentMethodTypes(paymentMethodTypeControl.getPaymentMethodTypeTransfers(getUserVisit(), entities));
-        
+
+        if(entities != null) {
+            if(session.hasLimit(LanguageFactory.class)) {
+                result.setPaymentMethodTypeCount(getTotalEntities());
+            }
+
+            result.setPaymentMethodTypes(paymentMethodTypeControl.getPaymentMethodTypeTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
     
