@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2025 Echo Three, LLC
+// Copyright 2002-2026 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -20,27 +20,27 @@ import com.echothree.control.user.payment.common.form.GetPaymentProcessorTypesFo
 import com.echothree.control.user.payment.common.result.PaymentResultFactory;
 import com.echothree.model.control.payment.server.control.PaymentProcessorTypeControl;
 import com.echothree.model.data.payment.server.entity.PaymentProcessorType;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.model.data.payment.server.factory.PaymentProcessorTypeFactory;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import javax.enterprise.context.RequestScoped;
+import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
-@RequestScoped
+@Dependent
 public class GetPaymentProcessorTypesCommand
-        extends BaseMultipleEntitiesCommand<PaymentProcessorType, GetPaymentProcessorTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<PaymentProcessorType, GetPaymentProcessorTypesForm> {
+    
+    @Inject
+    PaymentProcessorTypeControl paymentProcessorTypeControl;
     
     // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetPaymentProcessorTypesCommand */
@@ -49,19 +49,32 @@ public class GetPaymentProcessorTypesCommand
     }
     
     @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        return paymentProcessorTypeControl.countPaymentProcessorTypes();
+    }
+
+    @Override
     protected Collection<PaymentProcessorType> getEntities() {
-        var paymentProcessorTypeControl = Session.getModelController(PaymentProcessorTypeControl.class);
-        
         return paymentProcessorTypeControl.getPaymentProcessorTypes();
     }
     
     @Override
     protected BaseResult getResult(Collection<PaymentProcessorType> entities) {
         var result = PaymentResultFactory.getGetPaymentProcessorTypesResult();
-        var paymentProcessorTypeControl = Session.getModelController(PaymentProcessorTypeControl.class);
-        
-        result.setPaymentProcessorTypes(paymentProcessorTypeControl.getPaymentProcessorTypeTransfers(getUserVisit(), entities));
-        
+
+        if(entities != null) {
+            if(session.hasLimit(PaymentProcessorTypeFactory.class)) {
+                result.setPaymentProcessorTypeCount(getTotalEntities());
+            }
+
+            result.setPaymentProcessorTypes(paymentProcessorTypeControl.getPaymentProcessorTypeTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
     
