@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2025 Echo Three, LLC
+// Copyright 2002-2026 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -22,38 +22,36 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.payment.server.control.PaymentProcessorControl;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.party.server.factory.LanguageFactory;
 import com.echothree.model.data.payment.server.entity.PaymentProcessor;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import javax.enterprise.context.RequestScoped;
+import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
-@RequestScoped
+@Dependent
 public class GetPaymentProcessorsCommand
-        extends BaseMultipleEntitiesCommand<PaymentProcessor, GetPaymentProcessorsForm> {
+        extends BasePaginatedMultipleEntitiesCommand<PaymentProcessor, GetPaymentProcessorsForm> {
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.PaymentProcessor.name(), SecurityRoles.List.name())
-                )))
-        )));
-
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+                ))
         ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
 
     /** Creates a new instance of GetPaymentProcessorsCommand */
@@ -61,19 +59,35 @@ public class GetPaymentProcessorsCommand
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
 
+    @Inject
+    PaymentProcessorControl paymentProcessorControl;
+
+    @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        return paymentProcessorControl.countPaymentProcessors();
+    }
+
     @Override
     protected Collection<PaymentProcessor> getEntities() {
-        var paymentProcessorControl = Session.getModelController(PaymentProcessorControl.class);
-
         return paymentProcessorControl.getPaymentProcessors();
     }
 
     @Override
     protected BaseResult getResult(Collection<PaymentProcessor> entities) {
         var result = PaymentResultFactory.getGetPaymentProcessorsResult();
-        var paymentProcessorControl = Session.getModelController(PaymentProcessorControl.class);
 
-        result.setPaymentProcessors(paymentProcessorControl.getPaymentProcessorTransfers(getUserVisit(), entities));
+        if(entities != null) {
+            if(session.hasLimit(LanguageFactory.class)) {
+                result.setPaymentProcessorCount(getTotalEntities());
+            }
+
+            result.setPaymentProcessors(paymentProcessorControl.getPaymentProcessorTransfers(getUserVisit(), entities));
+        }
 
         return result;
     }
